2010-06-02  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        Fix the QScriptValue::strictlyEquals function.

        Handling for a few edge cases was added.

        New autotest that covers the QScriptValue::strictlyEquals function.

        [Qt] QScriptValue::strictlyEquals is broken
        https://bugs.webkit.org/show_bug.cgi?id=36600

        * qt/api/qscriptvalue.cpp:
        (QScriptValue::strictlyEquals):
        * qt/api/qscriptvalue_p.h:
        (QScriptValuePrivate::strictlyEquals):
        * qt/tests/qscriptvalue/qscriptvalue.pro:
        * qt/tests/qscriptvalue/tst_qscriptvalue.h:
        * qt/tests/qscriptvalue/tst_qscriptvalue_generated_comparison.cpp: Added.
        (tst_QScriptValue::strictlyEquals_initData):
        (tst_QScriptValue::strictlyEquals_makeData):
        (tst_QScriptValue::strictlyEquals_test):

Canonical link: https://commits.webkit.org/51617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60585 268f45cc-cd09-0410-ab3c-d52691b4dbfc