JavaScriptCore/qt/tests/qscriptvalue/qscriptvalue.pro
@@ -7,6 +7,7 @@ include(../tests.pri)
 SOURCES += \
     tst_qscriptvalue.cpp \
     tst_qscriptvalue_generated_init.cpp \
+    tst_qscriptvalue_generated_comparison.cpp \
     tst_qscriptvalue_generated_istype.cpp \
     tst_qscriptvalue_generated_totype.cpp \
 
